--- a/index.css
+++ b/index.css
@@ -1,3 +1,15 @@
+body{
+    background-image: url(Wallpaper.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    
+
+
+
+}
+
 h1{
+    
     color: red;
 }
